# visualize_3d

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: merge-request.yaml  push.yaml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: demo.ipynb
src/rpad/visualize_3d/: html.py  plots.py  primitives.py
tests/: html_test.py  plot_test.py  simple_test.py
visualize_3d/: plots.py
