[project]
name = "visualize_3d"
version = "0.1.0"
description = "Tools for visualizing 3D stuff."
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
authors = [
  {email = "baeisner@andrew.cmu.edu", name = "Ben Eisner"}
]
dependencies = [
  "plotly",
  "matplotlib",
]

[build-system]
requires = [
  "setuptools >= 62.3.2,<63",
  "setuptools-scm",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
  "pytest",
  "black >= 22.3.0",
  "isort",
  "mypy",
  "pylint",
  "autoflake",
  "pre-commit",
]
build_docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
]

[tool.isort]
profile = "black"
